--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
     "prism-theme-vars": "^0.2.2",
+    "sass": "^1.56.2",
     "vue": "^3.2.33",
     "vue-demi": "^0.12.5",
     "vue-i18n": "^9.1.9",
@@ -43,6 +44,8 @@
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-prism": "^2.2.4",
     "pnpm": "^6.32.9",
+    "stylelint": "^14.16.0",
+    "stylelint-config-standard": "^29.0.0",
     "typescript": "^4.6.3",
     "unocss": "^0.31.12",
     "unplugin-auto-import": "^0.7.1",
