--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^3.2.33",
     "vue-demi": "^0.12.5",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-slider-component": "4.1.0-beta.7"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
