--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "^8.3.0",
+    "@vueuse/core": "^9.6.0",
     "@vueuse/head": "^0.7.6",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
     "@iconify-json/carbon": "^1.1.3",
+    "@iconify-json/mingcute": "^1.1.3",
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
     "@types/lodash": "^4.14.186",
     "@types/markdown-it-link-attributes": "^3.0.1",
