--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
     "@iconify-json/carbon": "^1.1.3",
+    "@iconify-json/ic": "^1.1.10",
+    "@iconify-json/icon-park-twotone": "^1.1.5",
+    "@iconify-json/material-symbols": "^1.1.26",
     "@iconify-json/mingcute": "^1.1.3",
+    "@iconify-json/zondicons": "^1.1.3",
     "@intlify/vite-plugin-vue-i18n": "^4.0.0",
     "@types/lodash": "^4.14.186",
     "@types/markdown-it-link-attributes": "^3.0.1",
